# nitro-fig

./: .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  DEBUGGING.md  DEPLOY.md  README.md  STRATEGIES.md
src/: config.rs  lib.rs  main.rs  types.rs
src/engine/: mod.rs  pipeline.rs  risk.rs  runner.rs  state.rs
src/feeds/: binance.rs  mod.rs  polymarket.rs
src/gateway/: order.rs
src/market/: discovery.rs
src/math/: ewma.rs  mod.rs  normal.rs  oracle.rs  pricing.rs  regime.rs  vwap.rs
src/strategies/: bench_latency.rs  certainty_capture.rs  convexity_fade.rs  cross_timeframe.rs  distance_fade.rs  latency_arb.rs  lp_extreme.rs  mod.rs  momentum.rs  settlement_sniper.rs  strike_misalign.rs  test_helpers.rs
src/telemetry/: mod.rs  telegram.rs  writer.rs
