[package]
name = "polymarket-crypto"
version = "0.2.0"
edition = "2021"

[lib]
name = "polymarket_crypto"
path = "src/lib.rs"

[[bin]]
name = "bot"
path = "src/main.rs"

[[bin]]
name = "backtester"
path = "src/bin/backtester.rs"

[[bin]]
name = "recorder"
path = "src/bin/recorder.rs"

[[bin]]
name = "ws_test"
path = "src/bin/ws_test.rs"

[[bin]]
name = "analyzer"
path = "src/bin/analyzer.rs"

[[bin]]
name = "replay"
path = "src/bin/replay/main.rs"

[[bin]]
name = "backtest"
path = "src/bin/backtest/main.rs"

[[bin]]
name = "approve"
path = "src/bin/approve.rs"

[[bin]]
name = "redeem"
path = "src/bin/redeem.rs"

[[bin]]
name = "auto-redeem"
path = "src/bin/auto_redeem.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
futures-util = "0.3"
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.28"
polymarket-client-sdk = { version = "0.4", features = ["clob", "ctf", "data"] }
dotenvy = "0.15"
rustls = { version = "0.23", features = ["aws-lc-rs"] }
alloy = { version = "1.5", default-features = false, features = ["sol-types", "contract", "providers", "signer-local", "signers", "reqwest-rustls-tls"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
